@@ -3,21 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>IBDocumentLocation</key>
-	<string>75 199 356 293 0 0 1280 1002 </string>
+	<string>39 186 356 293 0 0 1280 1002 </string>
 	<key>IBEditorPositions</key>
 	<dict>
 		<key>29</key>
 		<string>230 675 316 44 0 0 1280 1002 </string>
 	</dict>
 	<key>IBFramework Version</key>
-	<string>283.0</string>
+	<string>286.0</string>
 	<key>IBOpenObjects</key>
 	<array>
-		<integer>533</integer>
 		<integer>498</integer>
-		<integer>29</integer>
-		<integer>421</integer>
-		<integer>387</integer>
 	</array>
 	<key>IBSystem Version</key>
 	<string>6F21</string>
